[package]
name = "parse_layer7"
version = "0.3.3"
edition = "2021"
authors = ["Cyprien Avico <avicocyprien@yahoo.com>"]
description = "A crate for parsing layer 7 packets comming from UDP OR TCP payloads."
homepage = "https://github.com/Akmot9/layer_7_packet_parser"
repository = "https://github.com/Akmot9/layer_7_packet_parser"
documentation = "https://docs.rs/parse_layer7"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["dns", "parser", "network"]
categories = ["network-programming", "parsing"]

[dependencies]
serde = "1.0.214"
serde_derive = "1.0.214"
serde_json = "1.0.132"

detect_dns_packet = "0.1.4"